<resources>
    <string name="app_name">ARScene</string>
    <string name="selectFile">选择上传文件</string>
    <string name="recVideo">录制视频</string>
    <string name="numSelectedFiles">未选择任何文件</string>
    <string name="hostAddress">主机地址</string>
    <string name="hostPort">主机端口</string>
    <string name="hostAddressN">192.168.123.57</string>
    <string name="hostPortN">5000</string>
    <string name="modelName">模型名称</string>
    <string name="modelNameN">test.fbx</string>
    <string name="connectServer">连接服务器并上传文件</string>
    <string name="downloadServer">连接服务器并下载文件</string>
    <string name="responseText">服务器等待响应中</string>
    <string name="startAR">进入AR增强现实相机</string>
</resources>
